--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
 
       <div class="middle">
         <h3>Monthly Subscription</h3>
-        <div class="price">
-          <h1>&dollar;29</h1>
-          <h4>per month</h4>
-        </div>
+        <h1>&dollar;29 <span>per month</span></h1>
         <h4>Full access for less than &dollar;1 a day</h4>
         <button>Sign Up</button>
       </div>
